// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InPageAlert /> renders an alert with error styling 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: transparent;
  padding: 10px 20px;
  text-align: center;
  max-width: 80%;
  margin: 20px auto;
  color: red;
  border-radius: 8px;
  border: 1px solid red;
  font-size: 14px;
}

<div>
  <div
    class="c0"
    type="error"
  >
    Oh no, there's an error
  </div>
</div>
`;

exports[`<InPageAlert /> renders an alert with success styling 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: transparent;
  padding: 10px 20px;
  text-align: center;
  max-width: 80%;
  margin: 20px auto;
  color: green;
  border-radius: 8px;
  border: 1px solid green;
  font-size: 14px;
}

<div>
  <div
    class="c0"
    type="success"
  >
    YAY! Success!
  </div>
</div>
`;
